--- a/views/general/index.ejs
+++ b/views/general/index.ejs
@@ -16,7 +16,7 @@
             <div class="image-wrap">
               <div class="image-info">
                 <h2 class="mb-3">Hội họa</h2>
-                <a href="single.html" class="btn btn-outline-white py-2 px-4">Xem thêm</a>
+                <a href="/gallery/art" class="btn btn-outline-white py-2 px-4">Xem thêm</a>
               </div>
               <img src="images/img_2.jpg" alt="Image">
             </div>
