--- a/views/general/footer.ejs
+++ b/views/general/footer.ejs
@@ -6,10 +6,10 @@
               <div class="col-12">
                   <!-- Footer Logo -->
                   <div class="footer-logo">
-                      <a href="index.html"><h4 style = "color:bisque;">SnapShot</h4></a>
+                      <a href="/"><h4 style = "color:bisque;">SnapShot</h4></a>
                   </div>
                   <!-- Copywrite -->
-                  <p><a href="#"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                  <p><a href="/"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
               </div>
