--- a/views/general/gallery.ejs
+++ b/views/general/gallery.ejs
@@ -1,5 +1,5 @@
 <% include header %>
-
+<link rel="stylesheet" href="css/gallery.css">
 <div class="site-section" data-aos="fade">
   <div class="container-fluid">
 
@@ -17,14 +17,37 @@
     <div class="row" id="lightgallery">
       <% images.forEach(function(image) { %>
       <% if (typeof image.album != 'undefined') {%>
-      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src=<%=`uploads/${image.user}/${image.name}`%> data-sub-html="<h4><%= image.title %></h4><h4>Tác giả: <a href = <%= `/user/${image.user} ` %>><%= image.user %></a></h4>
-        <h4>Album: <a href = <%= `/album/${image.album} ` %>><%= image.albumTitle %></a></h4><p><%= image.description %></p>">
+      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src=<%=`uploads/${image.user}/${image.name}`%> data-sub-html=" <h4><%= image.title %></h4>
+        <% if(image.liked) { %>
+        <i class='fa fa-heart red heart' onclick =<%= `click_heart(this,'${image._id}')` %>></i>
+        <% } else { %>
+          <i class='fa fa-heart heart' onclick =<%= `click_heart(this,'${image._id}')` %>></i>
+        <% } %>
+        <h4>Tác giả: <a href = <%= `/user/${image.user} ` %>><%= image.user %></a></h4>
+        <h4>Album: <a href = <%= `/album/${image.album} ` %>><%= image.albumTitle %></a></h4><p><%= image.description %></p> ">
+        <div class="container">
         <a href="#"><img src=<%=`uploads/${image.user}/${image.name}`%> alt="IMage" class="img-fluid" onerror="imgError(this)"></a>
+        <div class="middle">
+          <div class="text"><%= `${image.title}`%></div>
+        </div>
+      </div>
       </div>
       <% } else { %>
-        <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src=<%=`uploads/${image.user}/${image.name}`%> data-sub-html="<h4><%= image.title %></h4><h4>Tác giả: <a href = <%= `/user/${image.user} ` %>><%= image.user %></a></h4>
-          <p><%= image.description %></p>"><a href="#"><img src=<%=`uploads/${image.user}/${image.name}`%> alt="IMage" class="img-fluid" onerror="imgError(this)"></a>
+      <div class="col-sm-6 col-md-4 col-lg-3 col-xl-2 item" data-aos="fade" data-src=<%=`uploads/${image.user}/${image.name}`%> data-sub-html=" <h4><%= image.title %></h4>
+        <% if(image.liked) { %>
+        <i class='fa fa-heart red heart' onclick =<%= `click_heart(this,'${image._id}')` %>></i>
+        <% } else { %>
+          <i class='fa fa-heart heart' onclick =<%= `click_heart(this,'${image._id}')` %>></i>
+        <% } %>
+        <h4>Tác giả: <a href = <%= `/user/${image.user} ` %>><%= image.user %></a></h4>
+        <p><%= image.description %></p>">
+        <div class="container">
+        <a href="#"><img src=<%=`uploads/${image.user}/${image.name}`%> alt="IMage" class="img-fluid" onerror="imgError(this)" style="width:100%"></a>
+        <div class="middle">
+          <div class="text"><%= `${image.title}`%></div>
         </div>
+      </div>
+      </div>
       <% } %>
       <% })%>
     </div>
@@ -36,5 +59,17 @@
     var imageRow = image.parentNode.parentNode;
     imageRow.parentNode.removeChild(imageRow);
   }
+  function click_heart(bt_heart, id) {
+    $.ajax({
+    type: "get",
+    url: '/images/like/' + id,
+    success: function(response){
+        bt_heart.classList.toggle('red');
+        <% console.log('aaa') %>;
+    }
+  });
+
+  }
+
 </script>
 <% include footer %>
